# aranya-embedded

./: .actrc  .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  esp_prog.cfg  partitions.csv  rust-toolchain.toml  sdkconfig.defaults  taplo.toml
.cargo/: config.toml
.github/workflows/: rust_ci.yml
config/: policy.md  wifi.ron.template
crates/aranya-embedded-config/: Cargo.toml  README.md
crates/aranya-embedded-config/src/: main.rs
crates/aranya-embedded-storage-dumper/: Cargo.toml  README.md  graph.dot
crates/aranya-embedded-storage-dumper/src/: internal.rs  linear.rs  main.rs  plathacks.rs
crates/board-defs/: Cargo.toml
crates/board-defs/.cargo/: config.toml
crates/board-defs/src/: boards.rs  lib.rs
crates/board-defs/src/boards/: adafruit_feather_s3.rs  adafruit_qtpy_s3.rs  spideroak_demo_v2.rs
crates/chat-app/: Cargo.toml  README.md  TUTORIAL.md  build.rs  partitions.csv
crates/chat-app/.cargo/: config.toml
crates/chat-app/config/: policy.md
crates/chat-app/src/: application.rs  hardware.rs  main.rs  net.rs  storage.rs  watchdog.rs
crates/chat-app/src/application/: serial.rs
crates/chat-app/src/aranya/: daemon.rs  engine.rs  envelope.rs  error.rs  sink.rs  syncer.rs
crates/chat-app/src/hardware/: esp32_time.rs  neopixel.rs
crates/chat-app/src/net/: espnow.rs  irda.rs
crates/chat-app/src/storage/: internal.rs  sd.rs
crates/chat-app/src/storage/sd/: io_manager.rs
crates/chat-app/web/: client.html  manifest.json  worker.js
crates/demo-esp32-s3/: .gitignore  Cargo.toml  README.md  build.rs  partitions.csv  storage-dump.py
crates/demo-esp32-s3/.cargo/: config.toml
crates/demo-esp32-s3/config/: policy.md
crates/demo-esp32-s3/docs/: conf-demo-spec.md
crates/demo-esp32-s3/src/: aranya.rs  built.rs  hardware.rs  main.rs  net.rs  storage.rs  util.rs  watchdog.rs
crates/demo-esp32-s3/src/aranya/: daemon.rs  engine.rs  envelope.rs  error.rs  sink.rs  syncer.rs
crates/demo-esp32-s3/src/hardware/: neopixel.rs
crates/demo-esp32-s3/src/net/: espnow.rs  irda.rs  wifi.rs
crates/demo-esp32-s3/src/net/wifi/: tasks.rs
crates/demo-esp32-s3/src/storage/: internal.rs  sd.rs
crates/demo-esp32-s3/src/storage/sd/: io_manager.rs
crates/envelope-ffi/: Cargo.toml
crates/envelope-ffi/src/: lib.rs
crates/esp-irda-transceiver/: Cargo.toml  README.md
crates/esp-irda-transceiver/.cargo/: config.toml
crates/esp-irda-transceiver/src/: ir.rs  lib.rs
crates/esp-rmt-neopixel/: Cargo.toml  README.md
crates/esp-rmt-neopixel/src/: lib.rs  neopixel.rs  rgbu8.rs
crates/hardware-tester/: Cargo.toml  README.md
crates/hardware-tester/.cargo/: config.toml
crates/hardware-tester/src/: boards.rs  hardware.rs  main.rs
crates/hardware-tester/src/hardware/: esp32_time.rs
crates/parameter-store/: Cargo.toml  README.md
crates/parameter-store/src/: abstract_io.rs  lib.rs  parameter_store.rs
crates/parameter-store/src/abstract_io/: embedded.rs  file.rs
docs/: conf-demo-spec.md
parameter-store/: Cargo.toml
parameter-store/src/: abstract_io.rs  lib.rs  parameter_store.rs
parameter-store/src/abstract_io/: embedded.rs
src/: aranya.rs  engine.rs  error.rs  hardware.rs  heap.rs  keystore.rs  main.rs  net.rs  storage.rs  util.rs
src/aranya/: daemon.rs  engine.rs  envelope.rs  graph_store.rs  mod.rs  sink.rs  storage.rs  syncer.rs
src/aranya/linear_store/: imp.rs  mod.rs
src/built/: mod.rs
src/hardware/: esp32_engine.rs  esp32_rng.rs  esp32_time.rs  mod.rs  neopixel.rs  sdcard_store.rs
src/net/: espnow.rs  irda.rs
src/net/wifi/: addr.rs  tasks.rs
src/storage/: internal.rs  sd.rs
src/storage/sd/: io_manager.rs
src/tasks/: client.rs  mod.rs  router_host.rs
src/tcp/: format.rs  mod.rs  sync.rs
