[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
aranya-runtime = { git = "https://github.com/aranya-project/aranya-core", branch = "embedded-wip", package = "aranya-runtime" }
aranya-policy-ifgen = { git = "https://github.com/aranya-project/aranya-core", branch = "embedded-wip", package = "aranya-policy-ifgen" }
aranya-policy-vm = { git = "https://github.com/aranya-project/aranya-core", branch = "embedded-wip", package = "aranya-policy-vm" }
aranya-crypto = { git = "https://github.com/aranya-project/aranya-core", branch = "embedded-wip", package = "aranya-crypto" }
aranya-envelope-ffi = { git = "https://github.com/aranya-project/aranya-core", branch = "embedded-wip", package = "aranya-envelope-ffi" }
aranya-crypto-ffi = { git = "https://github.com/aranya-project/aranya-core", branch = "embedded-wip", package = "aranya-crypto-ffi" }
aranya-device-ffi = { git = "https://github.com/aranya-project/aranya-core", branch = "embedded-wip", package = "aranya-device-ffi" }
aranya-idam-ffi = { git = "https://github.com/aranya-project/aranya-core", branch = "embedded-wip", package = "aranya-idam-ffi" }
aranya-perspective-ffi = { git = "https://github.com/aranya-project/aranya-core", branch = "embedded-wip", package = "aranya-perspective-ffi" }
