[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
aranya-policy-lang = { git = "https://github.com/aranya-project/aranya-core", branch = "embedded-upstreaming", package = "aranya-policy-lang" }
aranya-policy-compiler = { git = "https://github.com/aranya-project/aranya-core", branch = "embedded-upstreaming", package = "aranya-policy-compiler" }
aranya-policy-ifgen-build = { git = "https://github.com/aranya-project/aranya-core", branch = "embedded-upstreaming", package = "aranya-policy-ifgen-build" }
aranya-runtime = { git = "https://github.com/aranya-project/aranya-core", branch = "embedded-upstreaming", package = "aranya-runtime" }
aranya-policy-ifgen = { git = "https://github.com/aranya-project/aranya-core", branch = "embedded-upstreaming", package = "aranya-policy-ifgen" }
aranya-policy-vm = { git = "https://github.com/aranya-project/aranya-core", branch = "embedded-upstreaming", package = "aranya-policy-vm" }
aranya-crypto = { git = "https://github.com/aranya-project/aranya-core", branch = "embedded-upstreaming", package = "aranya-crypto" }
aranya-envelope-ffi = { git = "https://github.com/aranya-project/aranya-core", branch = "embedded-upstreaming", package = "aranya-envelope-ffi" }
aranya-crypto-ffi = { git = "https://github.com/aranya-project/aranya-core", branch = "embedded-upstreaming", package = "aranya-crypto-ffi" }
aranya-device-ffi = { git = "https://github.com/aranya-project/aranya-core", branch = "embedded-upstreaming", package = "aranya-device-ffi" }
aranya-idam-ffi = { git = "https://github.com/aranya-project/aranya-core", branch = "embedded-upstreaming", package = "aranya-idam-ffi" }
aranya-perspective-ffi = { git = "https://github.com/aranya-project/aranya-core", branch = "embedded-upstreaming", package = "aranya-perspective-ffi" }
esp-hal = { version = "0.23.1", features = [
    "esp32s3",
    "unstable",
    "quad-psram"
] }
fugit = "0.3.7"
heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }
thiserror = { version = "2", default-features = false }
