[package]
name = "aranya-embedded-config"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
heapless = "0.8"
# TODO(chip): switch this to the public repo path
parameter-store = { path = "../parameter-store", features = ["std"] }
