[package]
name = "aranya-embedded-config"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# TODO(chip): switch this to the public repo path
parameter-store = { path = "../parameter-store", features = ["std"] }

aranya-crypto = { workspace = true }
aranya-id = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
