[package]
name = "aranya-embedded-storage-dumper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
aranya-runtime = { workspace = true }
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
postcard = "1.0.10"
serde = { version = "1.0", features = ["derive"] }
rkyv = "0.8.10"
