[package]
name = "aranya-embedded-storage-dumper"
version = "0.1.0"
edition = "2021"

[dependencies]
aranya-crypto = { workspace = true }
aranya-runtime = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
postcard = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true, features = ["derive"] }
