[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"


[dependencies]
board-defs = { path = "../board-defs" }
envelope-ffi = { path = "../envelope-ffi" }
esp-rmt-neopixel = { path = "../esp-rmt-neopixel" }
parameter-store = { path = "../parameter-store", features = ["embedded"] }

aranya-crypto = { workspace = true, features = ["memstore"] }
aranya-policy-ifgen = { workspace = true }
aranya-policy-vm = { workspace = true }
aranya-runtime = { workspace = true }
spideroak-base58 = { workspace = true }

bytes = { workspace = true }
embassy-executor = { workspace = true, features = ["nightly"] }
embassy-futures = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true, features = ["generic-queue-8"] }
embassy-usb = { workspace = true }
esp-alloc = { workspace = true }
esp-backtrace = { workspace = true, features = [
    "exception-handler",
    "panic-handler",
    "println",
    "custom-halt",
] }
esp-hal = { workspace = true }
esp-hal-embassy = { workspace = true }
esp-println = { workspace = true, features = ["log"] }
esp-storage = { workspace = true }
fugit = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }
heapless = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
owo-colors = { workspace = true }
postcard = { workspace = true, features = ["alloc"] }
rkyv = { workspace = true, features = ["alloc", "bytecheck"] }
serde = { workspace = true, features = ["alloc"] }
static_cell = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Enabled by "storage-internal" feature
embedded-storage = { workspace = true, optional = true }
esp-partition-table = { workspace = true, features = [
    "heapless",
], optional = true }

# Enabled by "storage-sd" feature
embedded-hal-bus = { workspace = true, optional = true }
embedded-sdmmc = { workspace = true, optional = true }

# Enabled by "net-irda" feature
crc = { workspace = true, optional = true }
esp-irda-transceiver = { path = "../esp-irda-transceiver", optional = true }
raptorq = { workspace = true, optional = true }

# Dependencies enabled for "net-esp-now"
esp-wifi = { workspace = true, features = ["log", "esp-now"], optional = true }


[build-dependencies]
aranya-policy-compiler = { workspace = true }
aranya-policy-ifgen-build = { workspace = true }
aranya-policy-lang = { workspace = true }
aranya-policy-vm = { workspace = true }
envelope-ffi = { path = "../envelope-ffi" }
rkyv = { workspace = true, features = ["alloc", "bytecheck"] }


[features]
default = ["net-esp-now", "spideroak-demo-v2", "storage-internal"]

adafruit-feather-s3 = ["board-defs/adafruit-feather-s3"]
adafruit-qtpy-s3 = ["board-defs/adafruit-qtpy-s3"]
spideroak-demo-v2 = ["board-defs/spideroak-demo-v2"]

storage-internal = [
    "dep:embedded-storage",
    "dep:esp-partition-table",
]

storage-sd = [
    "dep:embedded-hal-bus",
    "dep:embedded-sdmmc",
]

net-irda = [
    "dep:crc",
    "dep:esp-irda-transceiver",
    "dep:raptorq",
]

net-esp-now = [
    "dep:crc",
    "dep:esp-wifi",
    "dep:raptorq",
]

vendor-specific-usb = []
