[package]
name = "esp-irda-transceiver"
version = "0.2.0"
edition = "2018"
authors = ["Chip Black <chip@spideroak.com>"]
license = "MIT"
# repository = "https://github.com/aranya-project/esp-irda-transceiver"
# Do not publish this to crates.io, sensitive information
publish = false

[dependencies]
esp32s3 = { workspace = true }
esp-hal = { workspace = true }
embassy-sync = { workspace = true }
