[package]
name = "esp32-s3-hardware-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
board-defs = { path = "../board-defs" }

adafruit-seesaw = { workspace = true }
embassy-executor = { workspace = true, features = ["nightly"] }
embassy-futures = { workspace = true }
embassy-time = { workspace = true, features = ["generic-queue-8"] }
esp-alloc = { workspace = true }
esp-backtrace = { workspace = true, features = [
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { workspace = true }
esp-hal-embassy = { workspace = true }
esp-println = { workspace = true, features = ["log"] }
fugit = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }
log = { workspace = true }
nb = { workspace = true }

# For SD card
embedded-hal-bus = { workspace = true }
embedded-sdmmc = { workspace = true }

# For IrDA
esp-irda-transceiver = { path = "../esp-irda-transceiver" }

esp-rmt-neopixel = { path = "../esp-rmt-neopixel" }

[features]
adafruit-feather-s3 = ["board-defs/adafruit-feather-s3"]
adafruit-qtpy-s3 = ["board-defs/adafruit-qtpy-s3"]
spideroak-demo-v2 = ["board-defs/spideroak-demo-v2"]
