[package]
name = "parameter-store"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
crc = { workspace = true }
heapless = { workspace = true, features = ["serde"] }
postcard = { workspace = true, features = ["alloc"] }
serde = { workspace = true, features = ["alloc"] }
thiserror = { workspace = true }

embedded-storage = { workspace = true, optional = true }

[features]
embedded = ["dep:embedded-storage"]
std = []
